--- a/templates/projects/importers/excel.html
+++ b/templates/projects/importers/excel.html
@@ -11,6 +11,22 @@
 {{ render_form(form, action_url=url_for(target, short_name=project.short_name), action_text=_('Import'), btn_class="btn btn-primary") }}
 {% endblock %}
 
+{% block projectcontent %}
+<h3>{{_('From Excel Spreadsheet')}}</h3>
+<form method="post" enctype="multipart/form-data" action="{{ url_for(target, short_name=project.short_name) }}">
+   <fieldset>
+      {{ form.hidden_tag() }}
+      <span class="help-inline"> {{ _('Please choose local csv file with data and press Import button.')}} <br/>
+      <p><font color="red">Note: The csv file select should have column names matching to what they're defined in task presenter code.</font></p>
+      </span>
+      <div class="form-actions">
+         <input type="file" name="file" accept=".csv"><br/><br/>
+         <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-primary" >
+         <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn">{{_('Cancel')}}</a>
+      </div>
+   </fieldset>
+</form>
+{% endblock %}
 {% block extrajs %}
 <script>
     $("#submit").off('click').on('click', function(){
