--- a/templates/projects/tasks/excel.html
+++ b/templates/projects/tasks/excel.html
@@ -1,3 +1,3 @@
 
 {% from "projects/_helpers.html" import render_project_card_option %}
-{{ render_project_card_option(project, upload_method, title=_('Excel'), explanation=_('Upload/provide a public link to your own Excel file'), link=url_for(target, short_name=project.short_name, type='Excel'), link_action_text=_('Import data'), icon='table')}}
+{{ render_project_card_option(project, upload_method, title=_('Excel'), explanation=_('Upload/provide a public link to your own Excel file'), link=url_for(target, short_name=project.short_name, type='excel'), link_action_text=_('Import data'), icon='table')}}
